added icon size margin

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                <p ><a href=""><i class="fas fa-map-marker-alt"></i> Vadodara,Gujarat</a></p>
                <p><a href=""><i class="fas fa-mobile-alt"></i> +91-7434993123</a></p>
                <p><a href=" mailto: pitroda.np@gmail.com"><i class="far fa-envelope"></i> pitroda.np@gmail.com </a></p>
-               <p><a href=""><i class="fas fa-globe-europe"></i> https://codenaitik.github.io/NaitikPitroda/</a></p>
+               <p><a href="https://codenaitik.github.io/NaitikPitroda/"><i class="fas fa-globe-europe"></i> WWW.Naitikpitroda.com </a></p>
 
                <!-- <ul>
                   <li><a href=""><i class="fas fa-map-marker-alt"></i> Vadodara,Gujarat</a></li>
