--- a/index.html
+++ b/index.html
@@ -146,21 +146,21 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
             <div class="tooltip">
                Instagram
             </div>
-             <span> <a href="https://www.instagram.com/naitik_pitroda/"><i class="fab fa-instagram"></i></a></span>
+             <span> <a href="https://www.instagram.com/naitik_pitroda/"><i class="fab fa-instagram fa-2x"></i></a></span>
          </div>
 
          <div class="icon github">
             <div class="tooltip">
                Github
             </div>
-            <span> <a href="https://github.com/codeNaitik"><i class="fab fa-github"></i></a></span>
+            <span> <a href="https://github.com/codeNaitik"><i class="fab fa-github fa-2x"></i></a></span>
          </div>
 
          <div class="icon youtube">
             <div class="tooltip">
                Email
             </div>
-            <span><a href="mailto: pitroda.np@gmail.com"><i class="far fa-envelope"></i></a></span>
+            <span><a href="mailto: pitroda.np@gmail.com"><i class="far fa-envelope fa-2x"></i></a></span>
          </div>
 
       </div>
@@ -172,16 +172,16 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
          <div class="iconss">
          
             <div class="iconn "  >
-                <i class="fab fa-linkedin-in fa-2x" data-aos="zoom-in" data-aos-duration="4000"> </i>
+               <a href="https://www.linkedin.com/in/naitik-pitroda-75056b1a9/" style="color: blue"><i class="fab fa-linkedin-in fa-2x"></i></a>
             </div>
             <div class="iconn"  >
-                <i class="fas fa-envelope fa-2x" data-aos="zoom-in" data-aos-duration="4000"></i>
+               <a href="mailto: pitroda.np@gmail.com" style="color: red"><i class="far fa-envelope fa-2x"></i></a>
             </div>
             <div class="iconn"  >
-                <i class="fab fa-instagram fa-2x" data-aos="zoom-in" data-aos-duration="4000"> </i>
+               <a href="https://www.instagram.com/naitik_pitroda/" style="color: rgb(233, 51, 51)"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
             <div class="iconn"  >
-                <i class="fab fa-github fa-2x" data-aos="zoom-in" data-aos-duration="4000"> </i>
+               <a href="https://github.com/codeNaitik" ><i class="fab fa-github-alt fa-2x"></i></a>
             </div>
         
         </div>
@@ -695,7 +695,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
 
 
      <div class="chilld">
-      <div class="children" style="background-color:#FFDEDE ; align-items: center">
+      <div class="children" style="background-color:#FBACCC ; align-items: center">
        <div class="info" style="margin-left: 4.5em;">
           <img src="acc/gsf_LOR.png"  class="img img-fluid">
        </div>
@@ -766,7 +766,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
    </div>
 
    <div class="chilld">
-      <div class="children" style="background-color:#DDFFBC ; align-items: center">
+      <div class="children" style="background-color:#FBACCC ; align-items: center">
        <div class="info" >
           <img src="acc/qwiklab1.png"  class="img img-fluid">
        </div>
@@ -827,7 +827,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
       <section class="containerr">
    
          <div class="chilld">
-            <div class="children" style="background-color:#DDFFBC  ; align-items: center">
+            <div class="children" style="background-color:#FBACCC  ; align-items: center">
              <div class="info" style="margin-left: 4.5em;">
                 <img src="exp/exp17_GDSC.jpg"  class="img img-fluid">
              </div>
