--- a/experience.html
+++ b/experience.html
@@ -80,6 +80,36 @@
      <div class="py-3">
         <div class="container-fluid" style="padding-top: 1px;padding-bottom: 1px;">
             <div class="row row-cols-1 row-cols-lg-2" style="margin: 0px;">
+                <div class="col align-self-center"><img class="img-fluid" data-aos="flip-up" data-aos-duration="4000" src="./exp/exp18_swoc.png"></div>
+
+                <div class="col align-self-center" style="margin-top: 20px;margin-bottom: 20px;">
+
+                    <div class="text-center " data-aos="fade-up" data-aos-duration="1000" style="padding: 5px;">
+
+                        <div class="linee" data-aos="flip-left" data-aos-duration="2100" style="border: 10px solid white;border-radius: 5px;
+                        padding-top: 10px;"></div>
+
+                        <p data-aos="slide-down" data-aos-duration="1000" style="font-size: 40px;color: white;padding-top: 11px;"><strong>Script Winter of Code 2.0. (Open Source)</strong><br></p>
+
+                        <p data-aos="fade-up "  data-aos-duration="1250" data-aos-offset="200" style="color: rgb(228,228,228); font-size: 17px; text-align: justify; "> Script Winter of Code 2.0 is and <b>Open Source</b> program for 3 months. That's why it is called winter code. I got shortlisted among thousands of applicants for this program. </p>
+                      
+                        <!-- <div class="button" >
+                            <button class=" btnn btnn3" data-aos="slide-left" data-aos-offset="100" data-aos-duration="2000">Download cv </button>
+                        </div> -->
+                        <div class="linee" data-aos="flip-left" style="border: 10px solid white;border-radius: 5px;
+                        padding-top: 10px;"></div>
+                        
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -----------------divide-over----------------------------------- -->
+     <!-- -----------------divide-------------- -->
+
+     <div class="py-3">
+        <div class="container-fluid" style="padding-top: 1px;padding-bottom: 1px;">
+            <div class="row row-cols-1 row-cols-lg-2" style="margin: 0px;">
                 <div class="col align-self-center"><img class="img-fluid" data-aos="flip-up" data-aos-duration="4000" src="./exp/EXP14_web_intern_GSF.png"></div>
 
                 <div class="col align-self-center" style="margin-top: 20px;margin-bottom: 20px;">
