--- a/index.html
+++ b/index.html
@@ -835,6 +835,16 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
             <h2>Technical Lead at Google developer Student club (GDSC) </h2>
          </div>
          </div>
+
+         <div class="chilld">
+            <div class="children" style="background-color:#B8B5FF  ; align-items: center">
+             <div class="info" style="margin-left: 3.5em;">
+                <img src="exp/exp18_swoc.png"  class="img img-fluid">
+             </div>
+            
+            <h2>Script Winter of Code 2.0. (Open Source)</h2>
+         </div>
+         </div>
    
          <div class="chilld">
             <div class="children" style="background-color:#94EBCD ; align-items: center">
@@ -845,6 +855,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
             <h2>Campus Captain at Coding Minutes </h2>
          </div>
          </div>
+
 
          <div class="chilld">
             <div class="children" style="background-color:#B8B5FF  ; align-items: center">
