--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
           <img src="acc/gsf_LOR.png"  class="img img-fluid">
        </div>
       
-      <h2>Letter Of Recommendation National Engineering Olympiad</h2>
+      <h2>Letter Of Recommendation Gramm Swaraj Foundation</h2>
    </div>
    </div>
 
