--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
      <div class="chilld">
         <div class="children" style="background-color:#DAD0C2 ; align-items: center">
          <div class="info" style="margin-left: 4.5em;">
-            <img src="acc/NEO ca LOR_page-0001.jpg"  class="img img-fluid">
+            <img src="acc/NEO ca LOR_page-0001.png"  class="img img-fluid">
          </div>
         
         <h2>Letter Of Recommendation National Engineering Olympiad</h2>
@@ -920,10 +920,10 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
       <div class="chilld">
          <div class="children" style="background-color:#F5E79D ; align-items: center">
           <div class="info">
-             <img src="exp/exp1_neo.jpg"  class="img img-fluid">
+             <img src="exp/exp1_neo.png"  class="img img-fluid">
           </div>
          
-         <h2>Naitional Engineering Olympiad Campus Ambassador</h2>
+         <h2> Social Media Marketing Intern at Naitional Engineering Olympiad </h2>
       </div>
       </div>
 
