--- a/events.html
+++ b/events.html
@@ -46,6 +46,35 @@
     <div class="py-3">
         <div class="container-fluid" style="padding-top: 1px;padding-bottom: 1px;">
             <div class="row row-cols-1 row-cols-lg-2" style="margin: 0px;">
+                <div class="col align-self-center"><img class="img-fluid" data-aos="flip-up" data-aos-duration="4000" src="./events/dsc_wow.png"></div>
+
+                <div class="col align-self-center" style="margin-top: 20px;margin-bottom: 20px;">
+
+                    <div class="text-center " data-aos="fade-up" data-aos-duration="1000" style="padding: 5px;">
+
+                        <div class="linee" data-aos="zoom-in" data-aos-duration="2100" style="border: 10px solid white;border-radius: 5px;
+                        padding-top: 10px;"></div>
+
+                        <p data-aos="zoom-out" data-aos-duration="1000" style="font-size: 40px;color: white;padding-top: 11px;"><strong>Google Developer Student Club WOW</strong><br></p>
+
+                        <p data-aos="fade-up "  data-aos-duration="1250" data-aos-offset="200" style="color: rgb(228,228,228); font-size: 17px; text-align: justify; "> Learned about UI/UX, flutter, cloud. Got roadmap for beginner. How to start initially and move forward. </p>
+<!--                       
+                        <div class="button" >
+                            <button class=" btnn btnn3" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="2000">Download cv </button>
+                        </div> -->
+                        <div class="linee" data-aos="zoom-in" style="border: 10px solid white;border-radius: 5px;
+                        padding-top: 10px;"></div>
+                        
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -----------------divide-over----------------------------------- -->
+    <!-- -----------------divide-------------- -->
+    <div class="py-3">
+        <div class="container-fluid" style="padding-top: 1px;padding-bottom: 1px;">
+            <div class="row row-cols-1 row-cols-lg-2" style="margin: 0px;">
                 <div class="col align-self-center"><img class="img-fluid" data-aos="flip-up" data-aos-duration="4000" src="./events/event1_ai.png"></div>
 
                 <div class="col align-self-center" style="margin-top: 20px;margin-bottom: 20px;">
@@ -71,6 +100,7 @@
         </div>
     </div>
     <!-- -----------------divide-over----------------------------------- -->
+    
      <!-- -----------------divide-------------- -->
      <div class="py-3">
         <div class="container-fluid" style="padding-top: 1px;padding-bottom: 1px;">
