--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
              <i class="fas fa-calendar"> &nbspAug-june 2022 </i>
           </div>
 
-          <div class="cal"><i class="fas fa-angle-double-right"></i> &nbspGpa : onGoing</div>
+          <div class="cal"><i class="fas fa-angle-double-right"></i> &nbspGpa : 8.9</div>
            </div>
        </div>      
 
