--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
          </div>
 
          <div class="chilld">
-            <div class="children" style="background-color:#94EBCD  ; align-items: center">
+            <div class="children" style="background-color:#FBACCC  ; align-items: center">
              <div class="info" style="margin-left: 4.5em;">
                 <img src="exp/exp24_dfh.png"  class="img img-fluid">
              </div>
@@ -874,7 +874,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
          </div>
 
          <div class="chilld">
-            <div class="children" style="background-color:#94EBCD  ; align-items: center">
+            <div class="children" style="background-color:#B8B5FF  ; align-items: center">
              <div class="info" style="margin-left: 4.5em;">
                 <img src="exp/exp25_iep.jpg"  class="img img-fluid">
              </div>
